- Made the chatting sounds a little bit louder
- Fixed the slider going out of its place