@@ -1,2 +1,3 @@
 - Made the chatting sounds a little bit louder
 - Fixed the slider going out of its place
+- On reaction click works as adding/removing the reacion
